[package]
name = "rc-u8-reader"
version = "2.0.7"
authors = ["Magic Len <len@magiclen.org>"]
repository = "https://github.com/magiclen/rc-u8-reader"
homepage = "https://magiclen.org/rc-u8-reader"
keywords = ["rc", "arc", "in-memory", "read", "u8"]
categories = ["data-structures"]
description= "A tiny implement for reading `u8` data from a reference counted instance."
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "magiclen/rc-u8-reader", branch = "master" }
appveyor = { repository = "magiclen/rc-u8-reader", branch = "master", service = "github" }

[dependencies]
debug-helper = "0.3"

[features]
nightly = []