[package]
name = "rc-u8-reader"
version = "2.0.16"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/rc-u8-reader"
homepage = "https://magiclen.org/rc-u8-reader"
keywords = ["rc", "arc", "in-memory", "read", "u8"]
categories = ["data-structures"]
description = "A tiny implement for reading `u8` data from a reference counted instance."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
debug-helper = "0.3"
tokio = { version = "1", default-features = false, optional = true }